After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762653 - girepository: Fix some memory leaks in gdump.c
girepository: Fix some memory leaks in gdump.c
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-02-24 23:56 UTC by Philip Withnall
Modified: 2016-02-26 08:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
girepository: Fix some memory leaks in gdump.c (1.42 KB, patch)
2016-02-24 23:56 UTC, Philip Withnall
none Details | Review
girepository: Fix some memory leaks in gdump.c (2.17 KB, patch)
2016-02-25 00:07 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2016-02-24 23:56:05 UTC
Trivial patch attached.
Comment 1 Philip Withnall 2016-02-24 23:56:13 UTC
Created attachment 322318 [details] [review]
girepository: Fix some memory leaks in gdump.c

These were leaking memory when dumping introspection data from projects
for building their GIR files. That’s generally not a problem, unless
you’re trying to build the project with -fsanitize=address, which causes
the GIR build phase to error out due to leaking memory.
Comment 2 Philip Withnall 2016-02-25 00:07:20 UTC
Created attachment 322319 [details] [review]
girepository: Fix some memory leaks in gdump.c

These were leaking memory when dumping introspection data from projects
for building their GIR files. That’s generally not a problem, unless
you’re trying to build the project with -fsanitize=address, which causes
the GIR build phase to error out due to leaking memory.
Comment 3 Colin Walters 2016-02-26 03:21:55 UTC
Review of attachment 322319 [details] [review]:

Looks reasonable, thanks.
Comment 4 Philip Withnall 2016-02-26 08:24:42 UTC
Thanks.

Attachment 322319 [details] pushed as 1746e1d - girepository: Fix some memory leaks in gdump.c