girepository: Fix some memory leaks in gdump.c

These were leaking memory when dumping introspection data from projects
for building their GIR files. That’s generally not a problem, unless
you’re trying to build the project with -fsanitize=address, which causes
the GIR build phase to error out due to leaking memory.

https://bugzilla.gnome.org/show_bug.cgi?id=762653